# ai_agents_01_call_llm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ai_agents_01_call_llm/: __init__.py  main.py
src/ai_agents_01_call_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
